<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/spacing_xs">

    <TextView
        style="@style/Text.Headline.Medium"
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Character Name"/>

    <View
        android:id="@+id/v_status"
        android:layout_width="@dimen/status_size"
        android:layout_height="@dimen/status_size"
        app:layout_constraintTop_toTopOf="@id/tv_status"
        app:layout_constraintBottom_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        android:background="@drawable/bg_status"/>

    <TextView
        style="@style/Text.Label.Medium"
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/v_status"
        android:layout_marginStart="@dimen/spacing_xxs"
        tools:text="Status"/>

    <TextView
        style="@style/Text.Label.Large"
        android:id="@+id/tv_species_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/character_species"/>

    <TextView
        style="@style/Text.Body.Large"
        android:id="@+id/tv_species"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_species_label"
        app:layout_constraintStart_toStartOf="@id/tv_species_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Human"/>

    <TextView
        style="@style/Text.Label.Large"
        android:id="@+id/tv_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_species"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/character_gender"/>

    <TextView
        style="@style/Text.Body.Large"
        android:id="@+id/tv_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_label"
        app:layout_constraintStart_toStartOf="@id/tv_gender_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Male"/>

    <TextView
        style="@style/Text.Label.Large"
        android:id="@+id/tv_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/character_type"/>

    <TextView
        style="@style/Text.Body.Large"
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_type_label"
        app:layout_constraintStart_toStartOf="@id/tv_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="None"/>

    <TextView
        style="@style/Text.Label.Large"
        android:id="@+id/tv_origin_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/character_origin_location"/>

    <include
        android:id="@+id/origin_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_origin_location_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        layout="@layout/item_location_small"/>

    <TextView
        style="@style/Text.Label.Large"
        android:id="@+id/tv_last_known_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/origin_location"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/character_last_known_location"/>

    <include
        style="@style/Text.Body.Large"
        android:id="@+id/last_known_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_last_known_location_label"
        app:layout_constraintStart_toStartOf="@id/tv_last_known_location_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        layout="@layout/item_location_small"/>

    <TextView
        style="@style/Text.Label.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/last_known_location"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/character_episodes"/>

</androidx.constraintlayout.widget.ConstraintLayout>